2008-02-19  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmod.c: Add missing 'p' to the getopt_long's optstring.

2008-02-19  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupadd.c: Add missing 'p' to the getopt_long's optstring.
	* src/groupadd.c: Fix --non-unique's has_arg field to no_argument
	instead of required_argument.
	* src/groupadd.c: Add missing -p, --password description to the
	Usage message.

2008-02-19  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, etc/login.defs: Set GID_MIN to the same value as UID_MIN
	by default (1000).
	* NEWS, etc/login.defs: Added variables SYS_UID_MIN (100),
	SYS_UID_MAX (999), SYS_GID_MIN (100), SYS_GID_MAX (999) for system
	accounts.
	* libmisc/find_new_ids.c: Added support for system accounts in
	find_new_uid() and find_new_gid().
	* NEWS, src/newusers.c, src/useradd.c, src/groupadd.c: Added new
	option -r, --system for system accounts in useradd, groupadd, and
	newusers.

2008-02-18  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/groupmems.c: Fix buffer overflow when adding an user
	to a group. Thanks to Peter Vrabec.

2008-02-14  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, etc/useradd: Change the default HOME directory in
	/etc/default/useradd according FHS (/home instead of /home/users).
	This fixes Alioth's bug #310559. Thanks to Dale E. Edmons.

2008-02-14  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/newgrp.c: Use the correct AUDIT_CHGRP_ID event instead of
	AUDIT_USER_START, when changing the user space group ID with
	newgrp or sg. Thanks to sgrubb@redhat.com for the patch.

2008-02-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Reset oflg with uflg if the new UID is equal to
	the old one.
	* src/usermod.c: Reset mflg with dflg if the new home directory is
	the same as the old one.

2008-02-10  Nicolas François  <nicolas.francois@centraliens.net>
