@@ -1,3 +1,12 @@
+2008-02-25  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* NEWS, src/useradd.c, man/useradd.8.xml: Added options
+	--user-group (-U, Uflg) and --no-user-group (-N, Nflg) to replace
+	nflg.
+	* man/login.defs.d/USERGROUPS_ENAB.xml: useradd now also uses
+	USERGROUPS_ENAB.
+
+
 2008-02-19  Nicolas François  <nicolas.francois@centraliens.net>
 
 	* src/groupmod.c: Add missing 'p' to the getopt_long's optstring.
